// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TomorrowListPage render correct with tasks 1`] = `
<DocumentFragment>
  <div
    class="tomorrow-page"
  >
    <div
      class="tomorrow-page__content"
    >
      <section
        class="tomorrow-tasks"
      >
        <div
          class="my-4"
        >
          <form
            action="#"
          >
            <div
              class="mb-1"
            >
              <input
                autocomplete="off"
                class="form-control newTask"
                id="newTask"
                name="newTask"
                placeholder="Новая Задача"
                type="text"
                value=""
              />
            </div>
          </form>
        </div>
        <h2
          class="mb-3"
        >
          Задачи на завтра
        </h2>
        <ul
          class="list"
        >
          <li
            class="content__li"
          >
            <div
              class="content content_border"
            >
              <span
                class="task"
              >
                <button
                  aria-label="delete task"
                  class="button"
                  data-testid="delete-button"
                  name="delete task"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    version="1.1"
                    viewBox="0 0 16 16"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15.854 12.854c-0-0-0-0-0-0l-4.854-4.854 4.854-4.854c0-0 0-0 0-0 0.052-0.052 0.090-0.113 0.114-0.178 0.066-0.178 0.028-0.386-0.114-0.529l-2.293-2.293c-0.143-0.143-0.351-0.181-0.529-0.114-0.065 0.024-0.126 0.062-0.178 0.114 0 0-0 0-0 0l-4.854 4.854-4.854-4.854c-0-0-0-0-0-0-0.052-0.052-0.113-0.090-0.178-0.114-0.178-0.066-0.386-0.029-0.529 0.114l-2.293 2.293c-0.143 0.143-0.181 0.351-0.114 0.529 0.024 0.065 0.062 0.126 0.114 0.178 0 0 0 0 0 0l4.854 4.854-4.854 4.854c-0 0-0 0-0 0-0.052 0.052-0.090 0.113-0.114 0.178-0.066 0.178-0.029 0.386 0.114 0.529l2.293 2.293c0.143 0.143 0.351 0.181 0.529 0.114 0.065-0.024 0.126-0.062 0.178-0.114 0-0 0-0 0-0l4.854-4.854 4.854 4.854c0 0 0 0 0 0 0.052 0.052 0.113 0.090 0.178 0.114 0.178 0.066 0.386 0.029 0.529-0.114l2.293-2.293c0.143-0.143 0.181-0.351 0.114-0.529-0.024-0.065-0.062-0.126-0.114-0.178z"
                    />
                  </svg>
                </button>
                <span
                  class="task__taskName"
                >
                  task0
                </span>
              </span>
              <span
                class="task__buttons"
              >
                <button
                  aria-label="repeat task"
                  class="button"
                  data-testid="repeat-button"
                  name="repeat task"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g>
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                      <path
                        d="M13.828 1.686l8.486 8.486-1.415 1.414-.707-.707-4.242 4.242-.707 3.536-1.415 1.414-4.242-4.243-4.95 4.95-1.414-1.414 4.95-4.95-4.243-4.242 1.414-1.415L8.88 8.05l4.242-4.242-.707-.707 1.414-1.415zm.708 3.536l-4.671 4.67-2.822.565 6.5 6.5.564-2.822 4.671-4.67-4.242-4.243z"
                      />
                    </g>
                  </svg>
                </button>
                <button
                  aria-label="options task"
                  class="button"
                  data-testid="options-button"
                  name="options task"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    version="1.1"
                    viewBox="0 0 16 16"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M14 7h0.25c0.412 0 0.75-0.338 0.75-0.75v-2.5c0-0.413-0.338-0.75-0.75-0.75h-0.25v-3h-2v3h-0.25c-0.412 0-0.75 0.337-0.75 0.75v2.5c0 0.412 0.338 0.75 0.75 0.75h0.25v9h2v-9zM12 4h2v2h-2v-2zM9.25 13c0.412 0 0.75-0.338 0.75-0.75v-2.5c0-0.412-0.338-0.75-0.75-0.75h-0.25v-9h-2v9h-0.25c-0.412 0-0.75 0.338-0.75 0.75v2.5c0 0.412 0.338 0.75 0.75 0.75h0.25v3h2v-3h0.25zM7 10h2v2h-2v-2zM4.25 7c0.412 0 0.75-0.338 0.75-0.75v-2.5c0-0.413-0.338-0.75-0.75-0.75h-0.25v-3h-2v3h-0.25c-0.413 0-0.75 0.337-0.75 0.75v2.5c0 0.412 0.337 0.75 0.75 0.75h0.25v9h2v-9h0.25zM2 4h2v2h-2v-2z"
                    />
                  </svg>
                </button>
                <button
                  aria-label="task check"
                  class="button task__buttons_left-margin"
                  data-testid="check-button"
                  name="task check"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    version="1.1"
                    viewBox="0 0 16 16"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M14 0h-12c-1.1 0-2 0.9-2 2v12c0 1.1 0.9 2 2 2h12c1.1 0 2-0.9 2-2v-12c0-1.1-0.9-2-2-2zM14 14h-12v-12h12v12z"
                    />
                  </svg>
                </button>
              </span>
            </div>
          </li>
        </ul>
      </section>
    </div>
  </div>
   
</DocumentFragment>
`;

exports[`TomorrowListPage render correct without init 1`] = `
<DocumentFragment>
  <div
    class="tomorrow-page"
  >
    <div
      class="tomorrow-page__content"
    >
      <section
        class="tomorrow-tasks"
      >
        <div
          class="my-4"
        >
          <form
            action="#"
          >
            <div
              class="mb-1"
            >
              <input
                autocomplete="off"
                class="form-control newTask"
                id="newTask"
                name="newTask"
                placeholder="Новая Задача"
                type="text"
                value=""
              />
            </div>
          </form>
        </div>
        <div
          class="spinner-border spinner"
          role="status"
        >
          <span
            class="visually-hidden"
          >
            Loading...
          </span>
        </div>
      </section>
    </div>
  </div>
   
</DocumentFragment>
`;

exports[`TomorrowListPage render correct without tasks 1`] = `
<DocumentFragment>
  <div
    class="tomorrow-page"
  >
    <div
      class="tomorrow-page__content"
    >
      <section
        class="tomorrow-tasks"
      >
        <div
          class="my-4"
        >
          <form
            action="#"
          >
            <div
              class="mb-1"
            >
              <input
                autocomplete="off"
                class="form-control newTask"
                id="newTask"
                name="newTask"
                placeholder="Новая Задача"
                type="text"
                value=""
              />
            </div>
          </form>
        </div>
        <h2
          class="mb-3"
        >
          Задачи на завтра
        </h2>
        <span
          class="stub"
        >
          Нет новых задач
        </span>
      </section>
    </div>
  </div>
   
</DocumentFragment>
`;
